--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
-* {
+body {
     font-family: "Gill Sans", "Helvetica", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    background-color: #04BF62;
+    font-size: 18px;
 }
 
 .menu-bar {
     background-color:#04BF62;
-    height: 3rem;
+    height: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -27,7 +31,7 @@
 }
 
 .menu-bar .logo {
-    font-weight: 500;
+    font-weight: 300;
     font-size: 35px;
     font-style: italic;
     margin-left: 3em;
@@ -48,6 +52,136 @@
     background-color: rgb(0, 179, 250);
 }
 
+.sign-up-button:hover {background-color: rgb(0, 179, 250);}
+
 /*  gray #D9E0E2 
     white #FDFDFC
 */
+
+.content-1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    margin: 75px;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    flex-shrink: 0;
+}
+
+.content-1 .left {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    background-color: #04BF62;
+    color: #FDFDFC;
+    font-size: 20px;
+    gap: 20px;
+}
+.focus-span {
+    color: #ee6055;
+}
+.addictive-span {
+    color: #B5ead7
+}
+.gamifying-span {
+    font-weight: 900;
+    color: #FFF9BD;
+}
+.content-1 img {
+    width: 600px;
+}
+
+.headline {
+    margin: 0px;
+}
+
+.get-started {
+    background-color: #00b7ff;
+    padding: 12px;
+    color: #FDFDFC;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.get-started-container{
+    margin-top: 5px;
+}
+
+.content-2 {
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    padding: 50px;
+    gap: 10px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #D9E0E2;
+    margin: 0;
+    padding: 60px 0;
+    font-style: italic;
+}
+
+.quotes-content {
+    display: flex;
+    gap: 25px;
+}
+.quotes {
+    width: 250px;
+    height: 150px;
+    background-color: #B5ead7;
+    border-radius: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+    margin: 0;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    gap: 5px;
+}
+.quote-headline {
+    font-style: normal;
+}
+
+.productivity-span-quote {
+    color: #ee6055;
+}
+
+.sign-up {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.sign-up-button {
+    background-color: #00b7ff;
+    padding: 12px;
+    color: #FDFDFC;
+    border-radius: 25px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.footer {
+    height: 75px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #323b47;
+    color: rgb(221, 220, 220);
+}
